--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit
-pandas
-PyPDF2
-python-docx
-xlsxwriter
-pytesseract
-pillow
-pdfplumber
-pymupd
-requests
-openpyxl
-scikit-learn
-matplotlib
-plotly
-tqdm
-google-generativeai
+streamlit>=1.24.0
+pandas>=1.5.3
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+xlsxwriter>=3.1.0
+pytesseract>=0.3.10
+pillow>=10.0.0
+pdfplumber>=0.10.0
+pymupdf>=1.23.0  # Corrected from pymupd to pymupdf
+requests>=2.31.0
+openpyxl>=3.1.2
+scikit-learn>=1.3.0
+matplotlib>=3.7.2
+plotly>=5.15.0
+tqdm>=4.65.0
+google-generativeai>=0.4.0  # Added a safe minimum version
